Merged PR 1219: feat(report-service): report by org_id